Vue inital update

--- a/static/Village.html
+++ b/static/Village.html
@@ -28,7 +28,7 @@
     <div id="body" class="d-flex flex-column justify-content-center">
         <div id="village" class="d-flex flex-row justify-content-center">
             <label id="body-content">Villages: </label>
-            <input type="number"> 
+            <input type="number" min="1" max="5"> 
         </div>
         <div id="villager" class="d-flex flex-row justify-content-center"S>
             <label id="body-content">Villagers: </label>
@@ -36,8 +36,9 @@
         </div>
         <div id="resource" class="d-flex flex-row justify-content-center">
             <label id="body-content">Resources: </label>
-            <input type="number"> 
-        </div>
+            
+            <div id="VueResource"></div>
+        
     </div>
     <button id="btn">Submit</button>
 
