--- a/static/Add.html
+++ b/static/Add.html
@@ -27,6 +27,8 @@
 
 </head>
 <body>
+    <div id='SimRules'></div>
+    test
     <div id="NavBar" class="row">
         <div id="vanillaJSNav" class="NavTab ActiveTab col">VanillaJS</div>
         <div id="vueNav" class="NavTab col">Vue</div>
