getting the inital page done and functional

--- a/static/Village.html
+++ b/static/Village.html
@@ -25,22 +25,15 @@
 </head>
 <body>
 
-    <div id="body" class="d-flex flex-column justify-content-center">
-        <div id="village" class="d-flex flex-row justify-content-center">
-            <label id="body-content">Villages: </label>
-            <input type="number" min="1" max="5"> 
-        </div>
-        <div id="villager" class="d-flex flex-row justify-content-center"S>
-            <label id="body-content">Villagers: </label>
-            <input type="number"> 
-        </div>
+    <div id="VueBody"></div>
+
+
         <div id="resource" class="d-flex flex-row justify-content-center">
             <label id="body-content">Resources: </label>
             
             <div id="VueResource"></div>
         
-    </div>
-    <button id="btn">Submit</button>
+
 
 </body>
 </html>
