--- a/static/dApp.html
+++ b/static/dApp.html
@@ -36,6 +36,7 @@
         <div id="DefView"></div>
     </div>
     <div id="rulesTab" class="row" style="display: none;">
+        <div id="RulesView"></div>
     </div>
     <div id="simTab" class="row" style="display: none;">
     </div>
