--- a/static/Village.html
+++ b/static/Village.html
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-    <div class="row">
+    <div class="d-flex">
         <div id="defTab" class="col">
             <div id="DefView"></div>
         </div>
