--- a/static/Village.html
+++ b/static/Village.html
@@ -26,27 +26,7 @@
 
 </head>
 <body>
-    <div class="d-flex flex-column">
-        <div class="d-flex">
-            <div id="sim" class="flex-fill">
-                <div id="simVue"></div>
-            </div>
-            <div id="villages" class="flex-fill">
-                <div id="villagesVue"></div>
-            </div>
-        </div>
-        <div class="d-flex">
-            <div id="villagers" class="flex-fill">
-                <div id="villagersVue"></div>
-            </div>
-            <div id='locations' class="flex-fill">
-                <div id="locationsVue"></div>
-            </div>
-            <div id="buildings" class="flex-fill">
-                <div id="buildingsVue"></div>
-            </div>
-        </div>
-    </div>
+    <div id="RulesView"></div>
     <div id="results"></div>
 </body>
 </html>
