--- a/static/Simulation.html
+++ b/static/Simulation.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/vue@next"></script>
  
     <script type="module" src="init.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="SimStyle.css">
 
 
 </head>
