added tick stats and line chart

--- a/static/Simulation.html
+++ b/static/Simulation.html
@@ -15,8 +15,8 @@
     <!-- Latest Vue.js -->
     <script src="https://unpkg.com/vue@next"></script>
 
-    <!-- Latest D3.js -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- D3.js -->
+    <script src="https://d3js.org/d3.v4.js"></script>
     
     <!-- Simulation App -->
     <script type="module" src="init.js"></script>
